[package]
name = "merlin-client"
version = "0.1.0"
authors = ["Derek Witt <derekw023@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
